--- a/archives/toutiao-search/2024-02-16.md
+++ b/archives/toutiao-search/2024-02-16.md
@@ -1,59 +1,80 @@
 # 2024-02-16
 
-共 174 条
+共 192 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Feb 16 2024 12:00:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Feb 16 2024 13:00:36 GMT+0800 (China Standard Time) -->
 1. [三亚建议错峰出行或到海口等地转机](https://so.toutiao.com/search?keyword=三亚建议错峰出行或到海口等地转机)
 1. [舞狮女孩“低头三甩”有何玄机](https://so.toutiao.com/search?keyword=舞狮女孩“低头三甩”有何玄机)
 1. [交通部门积极应对返程客流高峰](https://so.toutiao.com/search?keyword=交通部门积极应对返程客流高峰)
-1. [三亚返程临时订票还能怎么省钱](https://so.toutiao.com/search?keyword=三亚返程临时订票还能怎么省钱)
-1. [男子村里开车遇交警查酒驾](https://so.toutiao.com/search?keyword=男子村里开车遇交警查酒驾)
-1. [只有河南的牛奶是两箱一提](https://so.toutiao.com/search?keyword=只有河南的牛奶是两箱一提)
+1. [民航局：全力保障三亚地区游客出行](https://so.toutiao.com/search?keyword=民航局：全力保障三亚地区游客出行)
+1. [胖东来员工尝面未清洗筷子锅里搅拌](https://so.toutiao.com/search?keyword=胖东来员工尝面未清洗筷子锅里搅拌)
+1. [花两万海南租民宿过年 退房遭拒绝](https://so.toutiao.com/search?keyword=花两万海南租民宿过年+退房遭拒绝)
+1. [孙颖莎输球 中国队3-2印度取首胜](https://so.toutiao.com/search?keyword=孙颖莎输球+中国队3-2印度取首胜)
 1. [美国扣押数千辆保时捷宾利奥迪](https://so.toutiao.com/search?keyword=美国扣押数千辆保时捷宾利奥迪)
+1. [冰雪大世界花35亿运营不到俩月值吗](https://so.toutiao.com/search?keyword=冰雪大世界花35亿运营不到俩月值吗)
 1. [胖东来黄金柜台内商品被抢购一空](https://so.toutiao.com/search?keyword=胖东来黄金柜台内商品被抢购一空)
-1. [贾玲回应为什么拍《热辣滚烫》](https://so.toutiao.com/search?keyword=贾玲回应为什么拍《热辣滚烫》)
-1. [OpenAI发布首个文生视频模型Sora](https://so.toutiao.com/search?keyword=OpenAI发布首个文生视频模型Sora)
-1. [贾玲如何做到没有肥胖纹和皮肤松弛](https://so.toutiao.com/search?keyword=贾玲如何做到没有肥胖纹和皮肤松弛)
+1. [外甥抱住舅舅女朋友吵闹要带回家](https://so.toutiao.com/search?keyword=外甥抱住舅舅女朋友吵闹要带回家)
 1. [春节吃太多要多喝茶刮油？没用](https://so.toutiao.com/search?keyword=春节吃太多要多喝茶刮油？没用)
 1. [普京称更希望拜登当选 特朗普回应](https://so.toutiao.com/search?keyword=普京称更希望拜登当选+特朗普回应)
-1. [济南兴洲解散](https://so.toutiao.com/search?keyword=济南兴洲解散)
 1. [景区将男厕改成女厕 男子带队闯入](https://so.toutiao.com/search?keyword=景区将男厕改成女厕+男子带队闯入)
-1. [民航局：全力保障三亚地区游客出行](https://so.toutiao.com/search?keyword=民航局：全力保障三亚地区游客出行)
-1. [冰雪大世界花35亿运营不到俩月值吗](https://so.toutiao.com/search?keyword=冰雪大世界花35亿运营不到俩月值吗)
-1. [少年之名苏尔求助：家中欠债40万](https://so.toutiao.com/search?keyword=少年之名苏尔求助：家中欠债40万)
-1. [梅西首发出场60分钟](https://so.toutiao.com/search?keyword=梅西首发出场60分钟)
+1. [贾玲如何做到没有肥胖纹和皮肤松弛](https://so.toutiao.com/search?keyword=贾玲如何做到没有肥胖纹和皮肤松弛)
+1. [男子村里开车遇交警查酒驾](https://so.toutiao.com/search?keyword=男子村里开车遇交警查酒驾)
+1. [《第二十条》连续实现票房逆跌](https://so.toutiao.com/search?keyword=《第二十条》连续实现票房逆跌)
 1. [新能源车海南出岛一票难求](https://so.toutiao.com/search?keyword=新能源车海南出岛一票难求)
-1. [女子吐槽爸爸29年前后对比照](https://so.toutiao.com/search?keyword=女子吐槽爸爸29年前后对比照)
-1. [17年前被抢男婴回家过年](https://so.toutiao.com/search?keyword=17年前被抢男婴回家过年)
-1. [谢楠1个月前见到贾玲一直在抖](https://so.toutiao.com/search?keyword=谢楠1个月前见到贾玲一直在抖)
-1. [美官员称对伊朗舰船进行网络攻击](https://so.toutiao.com/search?keyword=美官员称对伊朗舰船进行网络攻击)
-1. [17日起寒潮来袭 局部降温20℃以上](https://so.toutiao.com/search?keyword=17日起寒潮来袭+局部降温20℃以上)
+1. [济南兴洲解散](https://so.toutiao.com/search?keyword=济南兴洲解散)
 1. [薛之谦回应飞驰2盗摄质疑](https://so.toutiao.com/search?keyword=薛之谦回应飞驰2盗摄质疑)
-1. [外甥抱住舅舅女朋友吵闹要带回家](https://so.toutiao.com/search?keyword=外甥抱住舅舅女朋友吵闹要带回家)
-1. [李月汝砍29分9板助贝西克塔斯获胜](https://so.toutiao.com/search?keyword=李月汝砍29分9板助贝西克塔斯获胜)
-1. [潮汕女子英歌舞刚柔并济又飒又美](https://so.toutiao.com/search?keyword=潮汕女子英歌舞刚柔并济又飒又美)
-1. [春节返程3小时开了20公里](https://so.toutiao.com/search?keyword=春节返程3小时开了20公里)
+1. [克莱总得分突破15000分 勇士胜爵士](https://so.toutiao.com/search?keyword=克莱总得分突破15000分+勇士胜爵士)
+1. [女子吐槽爸爸29年前后对比照](https://so.toutiao.com/search?keyword=女子吐槽爸爸29年前后对比照)
+1. [新投资方恳请足协调查济南兴洲](https://so.toutiao.com/search?keyword=新投资方恳请足协调查济南兴洲)
+1. [谢楠1个月前见到贾玲一直在抖](https://so.toutiao.com/search?keyword=谢楠1个月前见到贾玲一直在抖)
+1. [年前路上吃光年货 返程路上吃光特产](https://so.toutiao.com/search?keyword=年前路上吃光年货+返程路上吃光特产)
 1. [江西赣州一电影院发生吵架打人事件](https://so.toutiao.com/search?keyword=江西赣州一电影院发生吵架打人事件)
+1. [17日起寒潮来袭 局部降温20℃以上](https://so.toutiao.com/search?keyword=17日起寒潮来袭+局部降温20℃以上)
+1. [潮汕女子英歌舞刚柔并济又飒又美](https://so.toutiao.com/search?keyword=潮汕女子英歌舞刚柔并济又飒又美)
+1. [17年前被抢男婴回家过年](https://so.toutiao.com/search?keyword=17年前被抢男婴回家过年)
+1. [交警提醒高速上倒车12分一次记满](https://so.toutiao.com/search?keyword=交警提醒高速上倒车12分一次记满)
+1. [俄外交部谴责乌克兰袭别尔哥罗德州](https://so.toutiao.com/search?keyword=俄外交部谴责乌克兰袭别尔哥罗德州)
+1. [OpenAI文生视频模型效果展示](https://so.toutiao.com/search?keyword=OpenAI文生视频模型效果展示)
+1. [孙悦因儿子复出](https://so.toutiao.com/search?keyword=孙悦因儿子复出)
+1. [你家囤的年货吃完了吗](https://so.toutiao.com/search?keyword=你家囤的年货吃完了吗)
+1. [祈福者买1500斤一对的蜡烛放寺庙](https://so.toutiao.com/search?keyword=祈福者买1500斤一对的蜡烛放寺庙)
+1. [俄别尔哥罗德遭乌袭击已致7死18伤](https://so.toutiao.com/search?keyword=俄别尔哥罗德遭乌袭击已致7死18伤)
+1. [网络间谍是如何有机可乘的](https://so.toutiao.com/search?keyword=网络间谍是如何有机可乘的)
+1. [琼州海峡驾车出岛港口拥堵怎么办](https://so.toutiao.com/search?keyword=琼州海峡驾车出岛港口拥堵怎么办)
+1. [李璇：中国职业足球联赛是伪市场](https://so.toutiao.com/search?keyword=李璇：中国职业足球联赛是伪市场)
+1. [男子去女友家拜年喝“趴”被抬走](https://so.toutiao.com/search?keyword=男子去女友家拜年喝“趴”被抬走)
+1. [内马尔回归利雅得新月恢复训练](https://so.toutiao.com/search?keyword=内马尔回归利雅得新月恢复训练)
+1. [小伙过年回家被邻居围观健身成果](https://so.toutiao.com/search?keyword=小伙过年回家被邻居围观健身成果)
+1. [董洁15岁儿子颜值](https://so.toutiao.com/search?keyword=董洁15岁儿子颜值)
+1. [哈尔滨也出现万元返程机票](https://so.toutiao.com/search?keyword=哈尔滨也出现万元返程机票)
+1. [媒体人谈济南兴洲解散](https://so.toutiao.com/search?keyword=媒体人谈济南兴洲解散)
+1. [台退将：北斗强大到让我想不通](https://so.toutiao.com/search?keyword=台退将：北斗强大到让我想不通)
+1. [姆总分享自己欧冠数据：68场44球](https://so.toutiao.com/search?keyword=姆总分享自己欧冠数据：68场44球)
+1. [少年之名苏尔求助：家中欠债40万](https://so.toutiao.com/search?keyword=少年之名苏尔求助：家中欠债40万)
+1. [普拉博沃为何能当选印尼总统](https://so.toutiao.com/search?keyword=普拉博沃为何能当选印尼总统)
+1. [小伙带家乡特产来河南找女友](https://so.toutiao.com/search?keyword=小伙带家乡特产来河南找女友)
+1. [三亚返程临时订票还能怎么省钱](https://so.toutiao.com/search?keyword=三亚返程临时订票还能怎么省钱)
+1. [只有河南的牛奶是两箱一提](https://so.toutiao.com/search?keyword=只有河南的牛奶是两箱一提)
+1. [贾玲回应为什么拍《热辣滚烫》](https://so.toutiao.com/search?keyword=贾玲回应为什么拍《热辣滚烫》)
+1. [OpenAI发布首个文生视频模型Sora](https://so.toutiao.com/search?keyword=OpenAI发布首个文生视频模型Sora)
+1. [梅西首发出场60分钟](https://so.toutiao.com/search?keyword=梅西首发出场60分钟)
+1. [美官员称对伊朗舰船进行网络攻击](https://so.toutiao.com/search?keyword=美官员称对伊朗舰船进行网络攻击)
+1. [李月汝砍29分9板助贝西克塔斯获胜](https://so.toutiao.com/search?keyword=李月汝砍29分9板助贝西克塔斯获胜)
+1. [春节返程3小时开了20公里](https://so.toutiao.com/search?keyword=春节返程3小时开了20公里)
 1. [王骁团队回应路演被骂](https://so.toutiao.com/search?keyword=王骁团队回应路演被骂)
 1. [舞狮小女孩与“狮群”同框亮相](https://so.toutiao.com/search?keyword=舞狮小女孩与“狮群”同框亮相)
 1. [C919启程去新加坡参展](https://so.toutiao.com/search?keyword=C919启程去新加坡参展)
 1. [直击各地春节返程现场](https://so.toutiao.com/search?keyword=直击各地春节返程现场)
-1. [董洁15岁儿子颜值](https://so.toutiao.com/search?keyword=董洁15岁儿子颜值)
 1. [《热辣滚烫》“线下氛围”从何而来](https://so.toutiao.com/search?keyword=《热辣滚烫》“线下氛围”从何而来)
 1. [龙年首场寒潮蓄势待发](https://so.toutiao.com/search?keyword=龙年首场寒潮蓄势待发)
 1. [海南省委书记：保障旅客顺利返程](https://so.toutiao.com/search?keyword=海南省委书记：保障旅客顺利返程)
-1. [你家囤的年货吃完了吗](https://so.toutiao.com/search?keyword=你家囤的年货吃完了吗)
 1. [曝姆巴佩在训练中心宣布离队决定](https://so.toutiao.com/search?keyword=曝姆巴佩在训练中心宣布离队决定)
 1. [特朗普将于下月接受刑事审判](https://so.toutiao.com/search?keyword=特朗普将于下月接受刑事审判)
-1. [孙悦因儿子复出](https://so.toutiao.com/search?keyword=孙悦因儿子复出)
 1. [媒体人：济南兴洲新投资方已经报警](https://so.toutiao.com/search?keyword=媒体人：济南兴洲新投资方已经报警)
-1. [年前路上吃光年货 返程路上吃光特产](https://so.toutiao.com/search?keyword=年前路上吃光年货+返程路上吃光特产)
 1. [正月初七“人胜节”](https://so.toutiao.com/search?keyword=正月初七“人胜节”)
 1. [大唐不夜城成春节假期车流最热景区](https://so.toutiao.com/search?keyword=大唐不夜城成春节假期车流最热景区)
-1. [祈福者买1500斤一对的蜡烛放寺庙](https://so.toutiao.com/search?keyword=祈福者买1500斤一对的蜡烛放寺庙)
 1. [高速返程请避开大流量路段](https://so.toutiao.com/search?keyword=高速返程请避开大流量路段)
-1. [胖东来员工尝面未清洗筷子锅里搅拌](https://so.toutiao.com/search?keyword=胖东来员工尝面未清洗筷子锅里搅拌)
 1. [姑娘转3种交通工具从海南返程](https://so.toutiao.com/search?keyword=姑娘转3种交通工具从海南返程)
 1. [曝乌军撤出阿夫杰耶夫卡部分地区](https://so.toutiao.com/search?keyword=曝乌军撤出阿夫杰耶夫卡部分地区)
 1. [春节档票房破66亿](https://so.toutiao.com/search?keyword=春节档票房破66亿)
@@ -64,7 +85,6 @@
 1. [老人养的猫为什么都很乖](https://so.toutiao.com/search?keyword=老人养的猫为什么都很乖)
 1. [张颂文情商有多高](https://so.toutiao.com/search?keyword=张颂文情商有多高)
 1. [胖东来老板太忙了](https://so.toutiao.com/search?keyword=胖东来老板太忙了)
-1. [台退将：北斗强大到让我想不通](https://so.toutiao.com/search?keyword=台退将：北斗强大到让我想不通)
 1. [妈妈出去打工 女儿撕心裂肺哭喊](https://so.toutiao.com/search?keyword=妈妈出去打工+女儿撕心裂肺哭喊)
 1. [男子套中多只大鹅引网友热议](https://so.toutiao.com/search?keyword=男子套中多只大鹅引网友热议)
 1. [湖南衡阳一饭店起火14人送医](https://so.toutiao.com/search?keyword=湖南衡阳一饭店起火14人送医)
@@ -88,7 +108,6 @@
 1. [以色列总理：将对拉法展开强势行动](https://so.toutiao.com/search?keyword=以色列总理：将对拉法展开强势行动)
 1. [曝姆巴佩将离队已与皇马达口头协议](https://so.toutiao.com/search?keyword=曝姆巴佩将离队已与皇马达口头协议)
 1. [银行股逆势走强能持续多久](https://so.toutiao.com/search?keyword=银行股逆势走强能持续多久)
-1. [哈尔滨也出现万元返程机票](https://so.toutiao.com/search?keyword=哈尔滨也出现万元返程机票)
 1. [台名嘴：中国大陆掌握统一主动权](https://so.toutiao.com/search?keyword=台名嘴：中国大陆掌握统一主动权)
 1. [演员宋家腾为白敬亭发声](https://so.toutiao.com/search?keyword=演员宋家腾为白敬亭发声)
 1. [网传白敬亭换衣服的原因](https://so.toutiao.com/search?keyword=网传白敬亭换衣服的原因)
@@ -171,7 +190,6 @@
 1. [“股神”巴菲特突然抛售苹果](https://so.toutiao.com/search?keyword=“股神”巴菲特突然抛售苹果)
 1. [春节假期三亚为什么火](https://so.toutiao.com/search?keyword=春节假期三亚为什么火)
 1. [日本新潟县发生5.1级地震](https://so.toutiao.com/search?keyword=日本新潟县发生5.1级地震)
-1. [小伙带家乡特产来河南找女友](https://so.toutiao.com/search?keyword=小伙带家乡特产来河南找女友)
 1. [楼市“小阳春”或成现实](https://so.toutiao.com/search?keyword=楼市“小阳春”或成现实)
 1. [海南增加出岛航班运力应对返程高峰](https://so.toutiao.com/search?keyword=海南增加出岛航班运力应对返程高峰)
 1. [驻英使馆驳斥英方官员涉台错误言论](https://so.toutiao.com/search?keyword=驻英使馆驳斥英方官员涉台错误言论)
